<resources>
    <string name="app_name">EDC</string>
    <string name="title">Exit Dragon Castle</string>
    <string name="start">Start</string>
    <string name="load">Load Data</string>
    <string name="collection">Collection</string>
    <string name="click">click</string>
    <string name="goldP">황금 공주</string>
    <string name="starP">별 공주</string>
    <string name="tigerP">호랑이 공주</string>
    <string name="doll_dog">강아지 인형(시종)</string>
    <string name="doll_bear">곰 인형(요리사)</string>
    <string name="doll_guard">경비병 인형</string>
    <string name="f1_51_1">정신을 차려보니 새장 안에 있다. 앞에 강아지 인형이 꾸벅꾸벅 졸다 나와 눈이 마주치고 벌떡 일어났다.</string>
    <string name="f1_51_2">으아 띠발 언제 깼누.... \n그.... 당신을 뭐라고 불러야함?</string>
    <string name="f1_52">글쿤요, 반가워요 %s 난 당신 담당이니 필요한게 있으면 말하셈</string>
    <string name="f1_52c1">날 꺼내줘</string>
    <string name="f1_52c2">나ㅏㄹ 꺼내 샹</string>
    <string name="f1_0">안돼 뭐가 됐던 새장에서는 못꺼내줌. 절대 꺼내지 말라고 하셨음, 대신 필요한건 다 해드림 필요한거 있음?랄랄랄랄랄랄라랄라랄|라라 랄</string>
    <string name="f1_0c1">여기 어디임?</string>
    <string name="f1_0c2">갈아입을 옷 좀</string>
    <string name="f1_0c3">배고팡</string>
    <string name="f1_0c4">(item:황금주머니)님 돈 줄테니 날 꺼내줘</string>
    <string name="f1_1">여기 드래곤님 성임. 님은 잡혀오심ㅠ 그밖에 필요한건?</string>
    <string name="f1_2_1">헐 샹 진짜네, 옷 찢어져 있잖 옷 가져올테니 기달 재봉사한테 물어보고 옴</string>
    <string name="f1_2_2">강아지 인형이 호다닥 가버렸다</string>
    <string name="f1_2c1">강아지 인형을 기다린다</string>
    <string name="f1_23c2">시발 이때다 새장을 탐색하자</string>
    <string name="f1_3">그런가용 요리사한테 말해 밥 가져옴, 기다리셈</string>
    <string name="f1_3c1">밥을 기다린다.</string>
    <string name="f1_4_1">뭐? 황금 오졌다. 흠흠.... 어이쿠 열쇠를 떨어트렸네, 갑자기 바빠서 이만... </string>
    <string name="f1_4_2">(소근소근)이 이상은 내 소관 밖이라,,, 빠이</string>
    <string name="f1_4_3">강아지 인형이 가버렸다. 인형이 앉았던 의자를 받침삼아 책상위로 안전히 내렸왔다.</string>
    <string name="f1_4_4">(item : 새장 열쇠)를 얻었다.</string>
    <string name="f1_4c1">열고 튄다.</string>
    <string name="f1_5_1">기달렸더니 강아지 인형이 하녀옷을 가지고 왔다.</string>
    <string name="f1_5_2">일단 이거 입으셈, 옷 고쳐 드림. 그 외에 내가 더 할거 있음?</string>
    <string name="f1_5_3">(item : 하녀옷)을 얻었다.</string>
    <string name="f1_6">새장은 책상 위 대롱대롱함, 금색~~~ 바닥이 덜걱거림. 바닥 이음쇠를 뺄 수 있을 것 같다.</string>
    <string name="f1_6c1">그냥 있는다.</string>
    <string name="f1_6c2">이음쇠를 빼고 발을 세게 구른다.</string>
    <string name="f1_7">아무리 기다려도 강아지 인형은 오지 않는다. 탈출의 기회인듯.</string>
    <string name="f1_7c1">이음쇠를 빼고 발을 세게 구른다.</string>
    <string name="f1_7c2">시발 이때다 새장을 탐색하자</string>
    <string name="f1_8">이음쇠를 빼고 퍽 치니 바닥을 훅 꺼졌다. 와 새장 탈출!</string>
    <string name="f1_53"> 이라기에는 너무 아팠다.  생명 -1</string>
    <string name="f1_54"> 육감의 티아라~ 착지를 가볍게 해버림.</string>
    <string name="f1_8c1">책상 위에서 주변을 관찰하자.</string>
    <string name="f1_9_1">여기는 방구석의 작은 책상 위, 방의 구조가 훤하게 보인다.</string>
    <string name="f1_9_2">이 층의 모든 장소를 가려면 이곳을 거쳐야 할듯함. 뭐할까?</string>
    <string name="f1_9c1">큰 문이 보이는 쪽으로 가보자</string>
    <string name="f1_9c2">스튜가 있는 조리대가 가자</string>
    <string name="f1_9c3">창문이 있어, 가보자!</string>
    <string name="f1_9c4">계단 쪽으로 가보자</string>
    <string name="f1_10_1">책상에서 의자를 타고 내려와 문이 보이는 곳까지 높은 러그를 해처가야함.</string>
    <string name="f1_10_2">러그 사이에서 반짝이는 뭔가가 보인다. 집을까?</string>
    <string name="f1_10c1">아 아이템 빳다죠, 개꿀</string>
    <string name="f1_10c2">ㄴㄴ 일단 지나친다.</string>
    <string name="f1_10c3">아씨 바늘이네, 조심히 줍는다.</string>
    <string name="f1_11">조리대로 넘어왔다. 무언가 끓이는 큰 곰 인형이 보인다. 끓고 있는 냄비에선 좋은 냄새가 난다.</string>
    <string name="f1_11c1">곰에게 말을 건다</string>
    <string name="f1_11c2">다시 돌아가서 다른 곳부터 본다.</string>
    <string name="f1_12">이어진 창틀을 따라 창문에 도착, 창문은 이음쇠로 막혀있음. 열려면 지랫대같은 도구가 필요할 것 같다.</string>
    <string name="f1_12c1">다른곳을 살펴보자</string>
    <string name="f1_12c2">(item : 지랫대)</string>
    <string name="f1_13">위로 가는 계단과 아래로 가는 계단이 있다.</string>
    <string name="f1_13c1">위로</string>
    <string name="f1_13c2">아래로 // 2_1 구현x</string>
    <string name="f1_13c3">탁자로 돌아가자</string>
    <string name="f1_14">아 아파!! 바늘에 찔렸다. 생명 -1 (item : 바늘) 추가</string>
    <string name="f1_14c1">문으로 계속 가자</string>
    <string name="f1_14c2">돌아가자</string>
    <string name="f1_15">드래곤이 다닐만한 크기의 문이 있다. 문 앞에 경비병이 막고 있다.</string>
    <string name="f1_60">강아지 인형이 경비병과 말하고 있다.</string>
    <string name="f1_61">//강아지 인형이 경비병에게 주의를 준 후이다.</string>
    <string name="f1_15c1">경비병과 대화한다</string>
    <string name="f1_15c2">돌아가자</string>
    <string name="f1_16">조심하여 바늘을 얻었다.(item : 바늘) 추가</string>
    <string name="f1_16c1">문으로 계속 가자</string>
    <string name="f1_16c2">돌아가자</string>
    <string name="f1_5859"> 음,,, 어딘가 익숙한데, 뭐 작업복을 입었으니 시종이겠죠.</string>
    <string name="f1_17_1">아 마침 잘왔어요, 우유가 없어 스튜를 완성 못해, 우유 심부름으로 강아지씨를 보냈죠. 근데 후추도 없는걸 발견했거든요</string>
    <string name="f1_17_2">후추 좀 가져다 주세요. 지하실의 아주 작은 상자에 후추와 향신료가 들은 상자가 있어.</string>
    <string name="f1_17_3">그 동안 상자를 정리를 안해 못 꺼냈지만 현재 정리작업을 하고 있으니 찾을 수 있을지도 몰라</string>
    <string name="f1_17c1">조아용(찾아본다 말하고 다시 책상으로)</string>
    <string name="f1_55_1">마침 잘왔어요, 지금 우유가 다 떨어져서 이대로면 드래곤님 식사 전까지 완성을 못함. 평소엔 지하실에 우유가 잔뜩인데,</string>
    <string name="f1_55_2">뭐 어쨋든, 신입인거 같아 마을에는 걱정되서 심부름은 못 보내겠고,</string>
    <string name="f1_55_3">지금 지하 창고 정리 중이니 거기서 우유나 대체품을 찾아봐죠 없으면 뭐 야채스프로 메뉴를 바꿔야지,,</string>
    <string name="f1_55c1">조아용(찾아본다 말하고 다시 책상으로)</string>
    <string name="f1_55c2">엄,,, 이걸로 될 것 같은데요</string>
    <string name="f1_18_1">엥 시종인형인가?? 작업복이 아닌데,,, 아앗 그 복장은 드래곤님이 모셔 온 공주님이잖아요! \n 여기서 이러시면 안돼요.</string>
    <string name="f1_18_2">다시 새장으로 가세요, 지금 공주님하고 드래곤님 드실 식사를 만드는 중이니까 조금만 더 기달려 주세요</string>
    <string name="f1_18_3">곰인형이 새장 윗부분을 때서 나를 대강 가둬놓고 조리대로 후다닥 갔다.</string>
    <string name="f1_18c1">탐색한다.</string>
    <string name="f1_18c2">기다린다.</string>
    <string name="f1_57_1"> 옷을 든 강아지인형이 탁자 위에서 안절부절하다 곰인형이 나를 원상태로 두는 걸 보고 안심했다. 그리고 곰인형이 가고나서 쪼르륵 왔다.</string>
    <string name="f1_57_2"> 옷 가져 달라고 하셔서 가져왔어요, 배고프시면 말씀하시지ㅠㅜ 그새를 못참고 요리사님께 가셨군요, 옷은 여기 있어요</string>
    <string name="f1_57_3">제가 밥을 가져다드릴테니 얌전히 계세요, 놀랐잖아요! 그리고 강아지 인형은 밥을 가지러 갔다. (itme :하녀옷)</string>
    <string name="f1_19_1">와 강아지 인형이 옷을 들고 있다. 돌아왔나봐</string>
    <string name="f1_19_2">아 님 지금 뭐하시는 거임? 님 탈출한거 알면 드래곤님이 화내실거임, 아 좆됨! 어카지,,,, 경비병 부를거임</string>
    <string name="f1_19c1">(item:황금주머니) 돈으로 무마한다</string>
    <string name="f1_19c2">(호랑공주) 못 본 척 안하면 잡아먹을테다! (//50% 확률로 성공/실패)</string>
    <string name="f1_20">왠지 지금 올라가는건 안좋은 예감이 든다고 수정구슬이 말하는 느낌임</string>
    <string name="f1_20c1">알빠? 노 빠꾸 킵 고잉~</string>
    <string name="f1_20c2">잠시 여기서 대기한다.</string>
    <string name="f1_21_1">창문을 지랫대로 열었다. 힘을 너무 쎄게 줘, 못을 뽑자마자 넘어졌다(생명력 -1)</string>
    <string name="f1_21_2">내려가려고 보니 너무 높다,, 안전하게 내려갈 수 있는 도구가 있다면 도망 칠 수 있을텐데</string>
    <string name="f1_21c1_1">없음 더 탐색해보자</string>
    <string name="f1_21c1_2">도망치지 않고 드래곤에게서 벗어날 방법을 찾아보자</string>
    <string name="f1_21c2">(item:밧줄)밧줄이 있다. 도망 ㄱㄱ ~도망엔딩~ </string>
    <string name="f1_21c3">(item:육감의티아라)이 정도 높이는 내려갈 수 있어 ~도망엔딩~</string>
    <string name="f1_22_1">강아지 인형이 경비경을 불렀다. 저쪽 문에서 경비경 인형이 왔다.</string>
    <string name="f1_22_2">도망치려했지만, 다른 인형들에게 붙잡혀 새장에 다시 가둬지게 되었다. 이 새장은 탈출이 불가능해 보인다. ~베드엔딩~ </string>
    <string name="f1_23_1">(경비병)앗 저 인간은 강아지 인형이 말한 탈출한 공주???</string>
    <string name="f1_23_2">경비병에게 붙잡혀서 다시 새장에 가둬졌다. 샹놈의 ㅐㅅ끼들 ~베드엔딩~ </string>
    <string name="f1_24">엥 인간모양의 하녀인형이라니 별일이네요ㅎㅎ 인간모양 인형을 최근에도 봤었는데!!1 신기하다1 먼 볼일인가요?</string>
    <string name="f1_24c1">나갈래애ㅇㅐㅐㅐㅐ</string>
    <string name="f1_24c2">엥 봤단거 뭔 말임????</string>
    <string name="f1_24c3">걍 인사하러 온거임. 난 갈게</string>
    <string name="f1_25_1">님은 새로운 인형인가요? 인간모양이네요ㅎ 인간인형을 요새 자주 보는 듯, 옷도 화려하네요</string>
    <string name="f1_25_2">드래곤님 취향이 바뀌셨나,,,, 쨌든 무슨 일이세요?</string>
    <string name="f1_25c1">나갈뤠에에에</string>
    <string name="f1_25c2">엥 자주 본다는게 뭔 말임????</string>
    <string name="f1_25c3">걍 인사하러 온거임. 난 갈게</string>
    <string name="f1_26">허가증이잖아요?? 드래곤님이 직접 시키신 심부름이군요! 가세요, (item:허가증 -1) ~도망 엔딩~</string>
    <string name="f1_27">기다려도 강아지는 안옴, 곰이 우유 필요하다고 했으니 밖으로 사러 나간듯, 한참 안 올 느낌임</string>
    <string name="f1_27c1">새장을 살펴보자</string>
    <string name="f1_28">새장 윗부분을 내 위에 대강 놓은거라 내 힘으로 들추고 빠져나갈 수 있을듯</string>
    <string name="f1_28c1">탈출하자</string>
    <string name="f1_29_1">곰이 화들짝 놀랐다. </string>
    <string name="f1_29_2">아니. 어떻게 나온거야! 내가 새장을 대충 놓았구나, 이번엔 절대 안 놓친다!!!</string>
    <string name="f1_29_3">공주를 다시 새장에 넣고 꽉 잠궜다. 더 이상 탈출은 힘들 것 같다. ~베드엔딩~</string>
    <string name="f1_30_1">아, 돈이요? 뭐 그럼 못 본척 하죠,, 하지만 그냥 둘 수는 없고 경비병에게 보고는 할거예요, 문 쪽으로 가지마셈</string>
    <string name="f1_30_2">그리고 옷을 가지고 경비병 쪽으로 갔다.</string>
    <string name="f1_31_1">으아앙, 살려줏메ㅜㅠㅜㅠㅜ</string>
    <string name="f1_31_2">단단히 일러두니 소리쳐 경비병을 부를 것 같지는 않다. 움직이기 불편하니 일단 얘가 가져온 옷으로 갈아입자(itme:하녀옷)</string>
    <string name="f1_32">아 알g알g 경비병이 비켜줬다. 도망가자!! ~도망엔딩~ </string>
    <string name="f1_33_1">가져왔나요? 뭐 이거면 충분하겠네요</string>
    <string name="f1_33_2">(곰인형 맞나?)스튜를 막 젓고 있다.</string>
    <string name="f1_33_3">앗 이제 보니 후추도 부족해요! 후추만 있으면 완성인데,, 후추도 가져다 줄 수 있나요? 지하실 작은 상자에 있을 거예요(item:우유-1)</string>
    <string name="f1_33c1">ㅇㅋ 찾아옴</string>
    <string name="f1_34_1">가져왔나요? 이거면 충분하겠군요 이제 강아지 인형만 기다리면 되겠어요. 모레 쯤이면 마을에 도착하려나?</string>
    <string name="f1_34_2">혹시 그 사이에 우유를 찾았을 수도 있으니 지하실을 찾아봐주시지 않을래요?</string>
    <string name="f1_34_3">분명 지하실에 잔뜩 있었는데 왠지 다 없어졌거든요, 분명 어딘가에 있을 거예요 (item : 후추 -1)</string>
    <string name="f1_34c1">ㅇㅋㅇㅋ (존나 부려먹네,,,)</string>
    <string name="f1_34c2">(item:우유)어쩐지 필요할 것 같더라구요, 우유 여기 있어요.</string>
    <string name="f1_35_1">앗 우유! 말도 안했는데 필요한걸 전부 가져오신건가요? 대단해요! 칭찬해드릴께요. 이제 스튜가 완성되었어요</string>
    <string name="f1_35_2">나무 그릇에 덜어드릴테니까 공주님께 가져다 주세요 식지않게 빨리요!,,, 뭐 식어도 맛있겠지만요!! (item:우유-1)(item:스튜+1)</string>
    <string name="f1_35c1">아 드디어 끝났다. 이제 여기 볼일 없음</string>
    <string name="f1_36_1">가져왔나요? 어디 줘봐요, 이제 스튜가 완성됐어요! 나무그릇에 덜어드릴테니까 공주님께 가져다 주세요</string>
    <string name="f1_36_2">식지 않게 빨리요! ,,, 뭐 식어도 맛있겠지만요!! (item :우유 -1)(item:스튜)</string>
    <string name="f1_36c1">아 드디어 끝났다. 이제 여기 볼일 없음</string>
    <string name="f1_37">재료를 가져왔나요??? 아니네요,,, 얼른 찾아와주세요</string>
    <string name="f1_37c1">힝구 찾으러 가자</string>
    <string name="f1_38">아 그래요? 누구 심부름인가요? 형식상 물어보는거예요ㅎㅎ</string>
    <string name="f1_38c5">요리사님이요</string>
    <string name="f1_38c4">약사님이요 </string>
    <string name="f1_38c3">시종장님이요 //현재 구현x</string>
    <string name="f1_38c2">(item 황금주머니)큼큼,,, 바깥바람을 쐬고 싶음</string>
    <string name="f1_38c1">알빠ㅉ</string>
    <string name="f1_39_1">어휴 말도 말요, 1층에 꼬까옷 입은 인간 인형이 있었는데 잘못 만들었나봐요, 드래곤님이 새장에 넣으려고 했는데 그 인형이 눈을 뜨고는</string>
    <string name="f1_39_2">책상도 뒤집어 엎고, 새장도 뿌시고 난리였어요. 드래곤님을 도와 그 인형이 들고 있던 흉기를 떨어트리는덴 성공했었는데,,,</string>
    <string name="f1_39_3">그후로 머리를 맞고 기절했었어요. 깨어나보니 드래곤님도 없고, 그 인형도 없고, 들고 있던 칼만 바닥에 있어 얼마나 무서웠는지 몰라요</string>
    <string name="f1_39_4">누가 다칠까봐 그 칼은 2층 사물함 안에 넣어놨구요,,, 어휴</string>
    <string name="f1_39_5">문지기가 말한 인간이 내 동생 같다, 동생을 찾으려면 단서가 더 필요할 것 같지만</string>
    <string name="f1_39c1">일단 탈출한 뒤 성으로 돌아가 도움을 구하자</string>
    <string name="f1_39c2">좀 더 이 성을 수색해보자</string>
    <string name="f1_40">오잉? 당신 시종 인형이었나요? 시종복이 부족했던건가? 어쨌든 이제 외출이 가능하시겠네요, 나가실건가요?</string>
    <string name="f1_40c1">YES</string>
    <string name="f1_40c2">NO, 걍 시종인형인거 알려주려고 왔어요, 그럼 난 이만</string>
    <string name="f1_41_1">또잉 새로운 인형이라 모르나요? 드래곤님한테 허가받은 종류의 인형이 아닐경우 성 밖으로 나가면 작동이 멈추잖아요</string>
    <string name="f1_41_2">님은 앞뒤를 봐도 허가받은 인형이 확실히 아니니까 나가지마세용</string>
    <string name="f1_41c1">잉,,, 돌아가자</string>
    <string name="f1_41c2">(item:허가증)허가증 있는데,, 이거 안됨?</string>
    <string name="f1_42">당신은 요리사에게 부족한 스튜재료를 사오라는 심부름을 받았다고 말했다. 경비병이 끄덕이며 문을 열어줌 ~도망엔딩~</string>
    <string name="f1_43">당신은 약사에게 마법약 완성에 부족한 재료를 사오라는 심부름을 받았다고 말했다. 경비병이 끄덕이며 문을 열어줌 ~도망엔딩~ </string>
    <string name="f1_44_1">당신은 시종장님이 인형한테도 잘 듣는 약을 찾아오라며 쫒아냈다고 말했다. 경비병은 안타까운 눈으로 걱정을 하며 말했다.</string>
    <string name="f1_44_2">그 괴짜가 그렇죠 뭐,, 일주일이 지나면 평범한 인형으로 돌아오니, 그 안에 돌아오세요.~도망엔딩~</string>
    <string name="f1_45">지금 놀리시는 건가요? 맨날 문앞에 마냥 서있는 것 같지만 저희도 할거는 한다구요, 몰라요 문 여는 것도 힘든데 앞으로 문 안 열어드릴거예요! 흥</string>
    <string name="extalk">나레기</string>
    <string name="extext">어쩌구 저쩌구 솰라쏼라 배가 고프다 졸립다 서브웨이 참치 먹고 싶다 3줄을 만들어볼 생각이다. 4줄도 가능한듯.</string>
    <string name="button">button</string>
</resources>