<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="280dp"
        android:layout_marginStart="231dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/start"
            android:layout_width="150sp"
            android:layout_height="60dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/start"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/load"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/load"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/collect"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/collection"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="122dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>